Reverted layout fix that... seems to break the layout.

--- a/src/app/modules/media/components/mt-media-cover/mt-media-cover.component.scss
+++ b/src/app/modules/media/components/mt-media-cover/mt-media-cover.component.scss
@@ -102,7 +102,6 @@
 
     .cover-action {
       $size: 1.25em;
-      display: contents;
       font-size: $font-size-100;
       height: $size;
       line-height: initial;
